--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-brand">Web</span>Studio</a
+        >
         <ul>
           <li><a class="top-nav current" href="./index.html">Studio</a></li>
           <li><a class="top-nav" href="./portfolio.html">Portfolio</a></li>
@@ -155,7 +157,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-brand">Web</span>Studio</a
+      >
       <p class="footer-descr">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
