--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-brand">Web</span>Studio</a
+        >
         <ul>
           <li><a class="top-nav" href="./index.html">Studio</a></li>
           <li>
@@ -54,100 +56,120 @@
         </ul>
         <ul class="filtr-portfolio">
           <li>
-            <img
-              src="./images/banking-interface.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Banking App Interface Concept</h2>
-            <p class="portfolio-descr">App</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/banking-interface.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-descr">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Cashless Payment</h2>
-            <p class="portfolio-descr">Marketing</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-descr">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/meditaion-app.jpg"
-              alt="Meditaion App"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Meditaion App</h2>
-            <p class="portfolio-descr">App</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/meditaion-app.jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Meditaion App</h2>
+              <p class="portfolio-descr">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Taxi Service</h2>
-            <p class="portfolio-descr">Marketing</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-descr">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Screen Illustrations</h2>
-            <p class="portfolio-descr">Design</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-descr">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Online Courses</h2>
-            <p class="portfolio-descr">Marketing</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-descr">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/instagram-stories.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Instagram Stories Concept</h2>
-            <p class="portfolio-descr">Design</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/instagram-stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-descr">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/organic-food.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Organic Food</h2>
-            <p class="portfolio-descr">Web Site</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/organic-food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-descr">Web Site</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/fresh-coffee.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-title">Fresh Coffee</h2>
-            <p class="portfolio-descr">Web Site</p>
+            <a href="#" class="portfolio-card">
+              <img
+                src="./images/fresh-coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-descr">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-brand">Web</span>Studio
+      </a>
       <p class="footer-descr">
         Increase the flow of customers and<br />
         sales for your business with digital<br />
